--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -15,7 +15,7 @@
 
 - name: Plataforma Blockchain
   descr: "La propuesta de valor de este proyecto tecnológico y social es, ofrecer una solución innovadora para dar respuestas a las necesidades de los voluntarios y los retos del tercer sector a través de una plataforma tecnológica basada en DLT/Blockchain, contribuyendo directamente a los objetivos de desarrollo sostenible."
-  demo: https://diegobedoya.thequbit.net/
+  demo: https://project1.thequbit.net/
   tags:
     - tag: Red B Alastria
     - tag: Hyperledger Besu
