--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""
 
 # LANDING PAGE
 # username: This will displayed on the landing page as your name.
-username: Diego Bedoya
+username: Diego
 # typing_text: This will be typed before 'Desplázate hacia abajo para ver más'.
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: SysAdmin
