--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: Sobre mí
 # about_me_description: This will be displayed under the title.
-about_me_description: Soy un apasionado por las nuevas tecnologías, con habilidades en la resolución de incidencias en sistemas digitales, en la implementación de nuevas tecnologías y en el uso de herramientas en ciberseguridad. <a class="highlight-link" href="http://home.thequbit.net" target="_blank" rel="noreferrer"> + </a>
+about_me_description: Soy un apasionado por las nuevas tecnologías, con habilidades en la resolución de incidencias en sistemas digitales, en la implementación de nuevas tecnologías y en el uso de herramientas en ciberseguridad. <a class="highlight-link" href="https://home.thequbit.net" target="_blank" rel="noreferrer"> + </a>
 # SKILLS SECTION
 # show_skills_card:
 # > setting this to true, will display the Skills section
