--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: diegofb.castro@gmail.com
 github_username: q3it
 codepen_username: profile/1269031
 dev_username: /
-linkedin_username: exampleUser
+linkedin_username: 
 twitter_username: 
 
 # ABOUT ME SECTION
