--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: Sobre mí
 # about_me_description: This will be displayed under the title.
-about_me_description: Soy un apasionado por las nuevas tecnologías, con habilidades en la resolución de incidencias en sistemas digitales, en la implementación de nuevas tecnologías y en el uso de herramientas en ciberseguridad. <a class="highlight-link" href="https://q3it.github.io/card/" target="_blank" rel="noreferrer"> + </a>
+about_me_description: Soy un gran aprendiz, siempre me gusta explorar nuevos horizontes. Deseo enriquecer mis conocimientos sobre los matices de la informática y aprovechar esta sabiduría para avanzar en mi carrera profesional. Tengo muchas ganas de trabajar con las últimas tecnologías y también de aprovechar las oportunidades que me ofrece el campo de la informática. Soy una persona muy apasionada y dedicada. Tengo buenos dotes de comunicación y grandes cualidades de liderazgo. Soy rápido aprendiendo cosas nuevas y tengo capacidad de pensamiento analítico. <a class="highlight-link" href="https://q3it.github.io/card/" target="_blank" rel="noreferrer"> + </a>
 # SKILLS SECTION
 # show_skills_card:
 # > setting this to true, will display the Skills section
