--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ contact_title: Contacto
 # GITHUB-METADATA
 # Set this to your forked repository
 # > e.g. <user>/<user>.github.io
-repository: longpdo/neumorphism
+repository: q3it/neumorphism
 projects:
   # sortby:
   # > set this to pushed, if you want to sort your github repositories by time.
