--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: diegofb.castro@gmail.com
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 github_username: q3it
-codepen_username: profile/1269031
+#codepen_username: profile/1269031
 dev_username: /
 linkedin_username: 
 twitter_username: 
