--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -23,8 +23,8 @@
     - tag: Metamask
 
 - name: SOHO
-  descr: "Una parte importante de la administración de servidores debe incluir un método sencillo para buscar las interfaces de red y direcciones IP por nombres de dominio (DNS). El empleo de nombres de dominio, en vez de direcciones IP, para especificar las direcciones de red puede facilitar la configuración de servicios y aplicaciones, y aumenta la capacidad de mantenimiento de los archivos de configuración."
-  demo: https://github.com/q3it/Bind9-Debian 
+  descr: "Pequeña oficina/oficina en casa (SOHO) es un concepto cada vez más común, ya que muchas personas trabajan ahora en lugares remotos o incluso desde su casa. Esto plantea una serie de requisitos, tanto desde el punto de vista tecnológico como empresarial, para satisfacer las necesidades de estos usuarios."
+  demo: https://pjct2.thequbit.net/inicio 
   tags:
     - tag: VirtualBox
     - tag: GNS3
