--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,7 +14,7 @@
 #     - tag: Node
 
 - name: Plataforma Blockchain
-  descr: "La propuesta de valor de este proyecto tecnológico y social es, ofrecer una solución innovadora para dar respuestas a las necesidades de los voluntarios y los retos del tercer sector a través de una plataforma tecnológica basada en DLT/Blockchain, contribuyendo directamente a los objetivos de desarrollo sostenible."
+  descr: "La propuesta de valor de este proyecto tecnológico y social es, ofrecer una solución innovadora para dar respuestas a las necesidades de los voluntarios a través de una plataforma tecnológica basada en DLT/Blockchain, contribuyendo directamente a los objetivos de desarrollo sostenible."
   demo: https://pjct1.thequbit.net/inicio
   tags:
     - tag: Red B Alastria
