--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ show_timeline_card: true
 timeline_title: Educación & Experiencia
 # cv_download_link: The link where you host your cv.
 # > e.g. you share your cv on your dropbox, then add the dropbox link here
-cv_download_link: https://diegobedoya.thequbit.net/
+cv_download_link: https://more.dbedoya.es/
 
 # PROJECTS SECTION
 # show_projects_card:
