--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,8 +5,8 @@
 # - name: Language
 #   weight: 5
 
-- name: Python
-  weight: 3
+#- name: Python
+#  weight: 3
 
 - name: Bash
   weight: 3
@@ -17,5 +17,5 @@
 - name: CSS3
   weight: 2
 
-- name: PHP
-  weight: 2
+#- name: PHP
+#  weight: 2
