--- a/_data/skills-frameworks.yml
+++ b/_data/skills-frameworks.yml
@@ -6,19 +6,19 @@
 #   weight: 5
 
 - name: Nagios
-  weight: 4
+  weight: 3
 
 - name: Nessus
-  weight: 3
+  weight: 2
 
-- name: Metasploit
-  weight: 3
+#- name: Metasploit
+#  weight: 3
 
 - name: OWASP
   weight: 1
 
-- name: Acunetix
-  weight: 2
+#- name: Acunetix
+#  weight: 2
 
 - name: pfSense
   weight: 4
