--- a/_data/skills-tools.yml
+++ b/_data/skills-tools.yml
@@ -17,8 +17,8 @@
 - name: Shell Linux
   weight: 1
 
-- name: PostgreSQL
-  weight: 1
+#- name: PostgreSQL
+#  weight: 1
 
 - name: Snort
   weight: 2
