--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -72,5 +72,5 @@
   date: 2025
   subtitle: LPI - Linux Essentials
   tags:
-    - tittle-url: https://lpi.org/v/LPI000667402/t3rdpzvtss
+    - tag: "https://lpi.org/v/LPI000667402/t3rdpzvtss"
   timeline-side: left
