--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -71,6 +71,7 @@
   title-url: https://www.lpi.org/es/
   date: 2025
   subtitle: LPI - Linux Essentials
+  url: https://lpi.org/v/LPI000667402/t3rdpzvtss
   tags:
     - tag: 'https://lpi.org/v/LPI000667402/t3rdpzvtss'
   timeline-side: left
